--- a/VulkanTest/VulkanTest.vcxproj.filters
+++ b/VulkanTest/VulkanTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="lve_model.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="lve_game_object.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lve_window.hpp">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="lve_model.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lve_game_object.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
