--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="first_app.hpp" />
     <ClInclude Include="lve_game_object.hpp" />
     <ClInclude Include="lve_model.hpp" />
+    <ClInclude Include="lve_renderer.hpp" />
     <ClInclude Include="lve_window.hpp" />
     <ClInclude Include="lve_pipeline.hpp" />
     <ClInclude Include="lve_device.hpp" />
