--- a/VulkanTest/VulkanTest.vcxproj.filters
+++ b/VulkanTest/VulkanTest.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="lve_game_object.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="lve_renderer.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\simple_shader.frag" />
