tiny obj loader

--- a/VulkanTest/.env
+++ b/VulkanTest/.env
@@ -1,2 +1,3 @@
 VULKAN_INCLUDE_PATH = /usr/include/vulkan
 GLSLC = /home/kc/dev/vulkan/glslc/bin/glslc
+TINYOBJ_PATH = /home/kc/dev/libs/tinyobjloader
