--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\tinyobjloader</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -108,7 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\tinyobjloader</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,7 +128,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\tinyobjloader</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -149,7 +149,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glm;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\glfw-3.3.8\include;C:\VulkanSDK\1.3.216.0\Include;C:\Program Files\Microsoft Visual Studio\2022\Community\Libraries\tinyobjloader</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -172,6 +172,7 @@
     <ClCompile Include="lve_game_object.cpp" />
     <ClCompile Include="lve_model.cpp" />
     <ClCompile Include="lve_renderer.cpp" />
+    <ClCompile Include="lve_utils.hpp" />
     <ClCompile Include="lve_window.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="lve_pipeline.cpp" />
