Fix: sampler map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,10 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "csignal": "cpp",
+        "span": "cpp",
+        "stack": "cpp"
     },
     "cmake.configureOnOpen": true
 }
